# yauaacpp

./: .gitignore  CMakeLists.txt  README.md
analyser/: generate.sh
analyser/cpp/: UserAgent.interp  UserAgentBaseListener.cpp  UserAgentBaseListener.h  UserAgentBaseVisitor.cpp  UserAgentBaseVisitor.h  UserAgentLexer.cpp  UserAgentLexer.h  UserAgentLexer.interp  UserAgentLexer.tokens  UserAgentListener.cpp  UserAgentListener.h  UserAgentParser.cpp  UserAgentParser.h  UserAgentTreeWalker.interp  UserAgentTreeWalkerBaseListener.cpp  UserAgentTreeWalkerBaseListener.h  UserAgentTreeWalkerBaseVisitor.cpp  UserAgentTreeWalkerBaseVisitor.h  UserAgentTreeWalkerLexer.cpp  UserAgentTreeWalkerLexer.h  UserAgentTreeWalkerLexer.interp  UserAgentTreeWalkerLexer.tokens  UserAgentTreeWalkerListener.cpp  UserAgentTreeWalkerListener.h  UserAgentTreeWalkerParser.cpp  UserAgentTreeWalkerParser.h  UserAgentTreeWalkerVisitor.cpp  UserAgentTreeWalkerVisitor.h  UserAgentVisitor.cpp  UserAgentVisitor.h
cmake/: Findantlr4-cpp-runtime.cmake  yauaacpp-config.cmake.in  yauaacpp.pc.in
src/go/yauaacpp/: go.mod  yauaa.go
src/go/yauaacpp/example/: example  main.go
src/resource/UserAgents/: AmazonDevices.yaml
src/yauaacpp/: AbstractUserAgentAnalyzer.cpp  AbstractUserAgentAnalyzer.h  AbstractUserAgentAnalyzerDirect.cpp  AbstractUserAgentAnalyzerDirect.h  AgentField.cpp  AgentField.h  AnalyzerPreHeater.cpp  AnalyzerPreHeater.h  Config.h.in  DefaultANTLRErrorListener.h  ImmutableUserAgent.h  MatchersInstance.cpp  MatchersInstance.h  PreHeatCases.cpp  PreHeatCases.h  Range.cpp  Range.h  UserAgent.cpp  UserAgent.h  UserAgentAnalyzer.cpp  UserAgentAnalyzer.h  UserAgentAnalyzerDirect.h  linked_hash.h  yauaa_c.h  yauaacpp.cpp  yauaacpp.h  yauaacpp_def.h
src/yauaacpp/analyze/: Analyzer.h  InvalidParserConfigurationException.h  Matcher.cpp  Matcher.h  MatcherAction.cpp  MatcherAction.h  MatcherExtractAction.h  MatcherFailIfFoundAction.cpp  MatcherFailIfFoundAction.h  MatcherList.h  MatcherRequireAction.cpp  MatcherRequireAction.h  MatcherVariableAction.h  MatchesList.h  NumberRangeList.h  NumberRangeVisitor.cpp  NumberRangeVisitor.h  UselessMatcherException.h  WordRangeVisitor.cpp  WordRangeVisitor.h
src/yauaacpp/analyze/treewalker/: TreeExpressionEvaluator.cpp  TreeExpressionEvaluator.h
src/yauaacpp/analyze/treewalker/steps/: Step.cpp  Step.h  WalkList.cpp  WalkList.h
src/yauaacpp/analyze/treewalker/steps/compare/: StepContains.cpp  StepContains.h  StepDefaultIfNull.cpp  StepDefaultIfNull.h  StepEndsWith.cpp  StepEndsWith.h  StepEquals.cpp  StepEquals.h  StepIsInSet.cpp  StepIsInSet.h  StepIsNotInSet.cpp  StepIsNotInSet.h  StepIsNull.cpp  StepIsNull.h  StepNotContains.cpp  StepNotContains.h  StepNotEquals.cpp  StepNotEquals.h  StepStartsWith.cpp  StepStartsWith.h
src/yauaacpp/analyze/treewalker/steps/lookup/: StepIsInLookupContains.cpp  StepIsInLookupContains.h  StepIsInLookupPrefix.cpp  StepIsInLookupPrefix.h  StepIsNotInLookupPrefix.cpp  StepIsNotInLookupPrefix.h  StepLookup.cpp  StepLookup.h  StepLookupContains.cpp  StepLookupContains.h  StepLookupPrefix.cpp  StepLookupPrefix.h
src/yauaacpp/analyze/treewalker/steps/value/: StepBackToFull.h  StepCleanVersion.h  StepConcat.h  StepConcatPostfix.h  StepConcatPrefix.h  StepExtractBrandFromUrl.h  StepNormalizeBrand.h  StepReplaceString.h  StepSegmentRange.h  StepWordRange.h
src/yauaacpp/analyze/treewalker/steps/walk/: StepDown.cpp  StepDown.h  StepNext.cpp  StepNext.h  StepNextN.cpp  StepNextN.h  StepPrev.cpp  StepPrev.h  StepPrevN.cpp  StepPrevN.h  StepUp.cpp  StepUp.h
src/yauaacpp/analyze/treewalker/steps/walk/stepdown/: ChildIterable.cpp  ChildIterable.h  UserAgentGetChildrenVisitor.cpp  UserAgentGetChildrenVisitor.h
src/yauaacpp/calculate/: CalculateAgentClass.h  CalculateAgentEmail.h  CalculateAgentName.h  CalculateDeviceBrand.h  CalculateDeviceName.cpp  CalculateDeviceName.h  CalculateNetworkType.h  ConcatNONDuplicatedCalculator.h  FieldCalculator.h  MajorVersionCalculator.h
src/yauaacpp/classify/: DeviceClass.h  UserAgentClassifier.h
src/yauaacpp/config/: AnalyzerConfig.cpp  AnalyzerConfig.h  ConfigLoader.cpp  ConfigLoader.h  MatcherConfig.cpp  MatcherConfig.h  PackagedRules.cpp  PackagedRules.h  TestCase.cpp  TestCase.h
src/yauaacpp/debug/: AbstractUserAgentAnalyzerTester.cpp  AbstractUserAgentAnalyzerTester.h  DebugUserAgent.cpp  DebugUserAgent.h  FlattenPrinter.h  UserAgentAnalyzerTester.cpp  UserAgentAnalyzerTester.h
src/yauaacpp/parse/: EvilManualUseragentStringHacks.cpp  EvilManualUseragentStringHacks.h  UserAgentTreeFlattener.cpp  UserAgentTreeFlattener.h
src/yauaacpp/tool/: Builder.h  LUrlParser.cpp  dir.cpp  dir.h  encode.cpp  encode.hpp  lrumap.h  tool.cpp  tool.h
src/yauaacpp/utils/: AntlrUtils.cpp  AntlrUtils.h  CheckLoggingDependencies.h  HostnameExtracter.cpp  HostnameExtracter.h  ListSplitter.cpp  ListSplitter.h  Normalize.cpp  Normalize.h  NotInAntlr4.h  PrefixMap.h  Splitter.h  StringPrefixMap.h  StringPrefixTrie.h  VersionSplitter.cpp  VersionSplitter.h  WordSplitter.cpp  WordSplitter.h  YamlUtils.cpp  YamlUtils.h  YauaaVersion.cpp  YauaaVersion.h
test/: CMakeLists.txt  ua.txt
test/src/yauaacpp/: test.c  test.cpp
